# exlinux-

./: CHANGELOG  Kconfig  Makefile  build_kernel.sh
anykernel3/: version
arch/arm64/: Kconfig
arg/: Cargo.toml  Kconfig  Makefile  arg_core.c  arg_internal.h  rust-toolchain.toml
arg/Arch/arm64/: atomics.S  cache.S  prefetch.S  regs.S
arg/arch/arm64/: barriers.S
arg/hook/: enqueue.c  load.c  picknext.c  shim.c  wakeup.c
arg/include/: arg_abi.h
arg/src/: allocator.rs  bindings.rs  error.rs  lib.rs  runtime.rs
arg/src/dispatch/: async_mode.rs  balance.rs  packing.rs
arg/src/policy/: energy.rs  fps.rs  mod.rs  sync_mode.rs
arg/src/state/: cpu_state.rs  mod.rs  task_state.rs
arg/src/topology/: cluster.rs  mod.rs  smp.rs
arg/src/vthread/: join.rs  mod.rs  pool.rs  split.rs  worker.rs
arg/topology/: Makefile  topology.c
arg/vthread/: vthread.c
drivers/: Makefile
drivers/devfreq/: governor_simpleexynos.c
drivers/sensorhub/: Kconfig
drivers/staging/: Kconfig  Makefile
fs/: exec.c  namespace.c  open.c  read_write.c  stat.c
fs/notify/: fdinfo.c
include/linux/: sched.h
kernel/: fork.c
kernel/sched/: Kconfig  Makefile  arg_hook.c  core.c  loadavg.c  rt.c  sched.h
mm/: page_alloc.c
net/: Kconfig  Makefile
net/wireguard/: .allowedips.o.cmd  .cookie.o.cmd  .device.o.cmd  .main.o.cmd  .netlink.o.cmd  .noise.o.cmd  .peer.o.cmd  .peerlookup.o.cmd  .queueing.o.cmd  .ratelimiter.o.cmd  .receive.o.cmd  .send.o.cmd  .socket.o.cmd  .timers.o.cmd  .wireguard.o.cmd
scripts/: setlocalversion
security/selinux/: selinuxfs.c
(+14 files in other folders)
